Excluded .aliases and .lvlps!
Made it so it ignores files that do not need to be synced.

- The GitHub Masters

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# LabVIEW Crap
+*.aliases
+*.lvlps
+
 # =========================
 # Operating System Files
 # =========================
