--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,12 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# LabVIEW Crap
+.aliases
+.lvlps
+*.aliases
+*.lvlps
+
 # =========================
 # Operating System Files
 # =========================
