--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.aliases
+*.lvlps
+2018 Robot Project.lvlps
+2018 Robot Project.lvlps
